<resources>
    <string name="app_name">Мой словарь</string>
    <string name="addfavorite_alert_message">Добавить к изучению?</string>
    <string name="deletefavorite_alert_message">Удалить из избранного?</string>
    <string name="selected_alert_message">Список пуст добавьте  в список слова на странице словаря</string>
    <string name="selected_message">Список пуст добавьте  в список слова на странице выбора</string>
    <string name="action_yes">ДА</string>
    <string name="action_no">НЕТ</string>
    <string name="fragment_words_select_checkbox_select_all">Выбрать все</string>
    <string name="fragment_words_check_button_check_answer">Проверить</string>
    <string name="fragment_words_check_button_previous">Предыдущее</string>
    <string name="fragment_words_check_button_next">Следующее</string>

</resources>