<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/no_data_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_no_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/textViewNoData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="24dp"
        android:text="@string/selected_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_data_imageView" />

    <TextView
        android:id="@+id/question_word"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textColor="@color/sapphire"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/check_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        tools:text="@string/selected_alert_message" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/check_answer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_sapphire"
        android:text="@string/fragment_words_check_button_check_answer"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/answer_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_word"
        app:layout_constraintWidth_percent="0.75" />

    <TextView
        android:id="@+id/answer_word"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textColor="@color/light_slate_grey"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/previous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_answer"
        tools:text="@string/deletefavorite_alert_message" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/previous"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/bg_button_sapphire"
        android:text="@string/fragment_words_check_button_previous"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/answer_word" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_button_sapphire"
        android:text="@string/fragment_words_check_button_next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/previous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/previous"
        app:layout_constraintTop_toTopOf="@id/previous" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/data_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="question_word, check_answer, answer_word, previous, next"
        tools:ignore=""/>


</androidx.constraintlayout.widget.ConstraintLayout>